--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "Simple-Whatsapp-Bot",
-  "description": "Sexy El Que Lo Lea 7w7",
+  "name": "Javierciito-Bandoleros",
+  "description": "Cueco El Que Lo Lea ",
   "repository": "https://github.com/NeKosmic/Quantum-Bot/",
   "logo": "https://i.ibb.co/VjF33JW/images-8.jpg",
   "keywords": ["nodejs", "whatsapp-bot", "multi-device"],
