--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Javierciito-Bandoleros",
+  "name": "Javierciito-Grσνє$ᴛrєєᴛ.",
   "description": "Cueco El Que Lo Lea ",
   "repository": "https://github.com/NeKosmic/Quantum-Bot/",
   "logo": "https://i.ibb.co/VjF33JW/images-8.jpg",
